integration_tests/codegen_fail/fail/scalar/derive_multiple_unnamed_fields.rs
use juniper::GraphQLScalar;

#[derive(GraphQLScalar)]
struct Scalar(i32, i32);

fn main() {}
